add preference setting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.DemoActivity"></activity>
-        <activity android:name=".ui.SplashActivity"
+        <activity android:name=".ui.SettingActivity"></activity>
+        <activity android:name=".ui.DemoActivity" />
+        <activity
+            android:name=".ui.SplashActivity"
             android:theme="@style/FullScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
